--- a/introduction.html
+++ b/introduction.html
@@ -13,7 +13,17 @@
 </head>
 
 <body>
-
+    <p>Personal background: Born in NC</p>
+    <p>Professional Background: </p>
+    <p>Academic Background: Full Stack Development Student in progress.</p>
+    <p>Background in this Subject: I have taken the intro WEB-110 class, as well as most other introductory courses
+        including CIS-115, DBA-110, and CSC-151.</p>
+    <p>Primary Computer Platform: Windows 10, I used to dual boot Windows and Linux(Ubuntu) to try a new OS, I enjoyed
+        it but recently reverted back.</p>
+    <p>Courses I'm in & Why:</p>
+    <p>WEB115 - Web Markup and Scripting </p>
+    <p>Funny/Interesting Item about Yourself: </p>
+    <p>I'd also like to Share: </p>
 
     
     <footer>
