--- a/introduction.html
+++ b/introduction.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>introduction</title>
 
 
     <a href="gwhitle.github.io">Home</a>
@@ -25,7 +25,7 @@
     <p>Funny/Interesting Item about Yourself: </p>
     <p>I'd also like to Share: </p>
 
-    
+
     <footer>
         Github LinkedIn Freecodecamp Codeacademy
         <br>
