--- a/contract.html
+++ b/contract.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contract</title>
     <link rel="stylesheet" href="styles.css">
 
     <a href="gwhitle.github.io">Home</a>
-    <a href="introduction.html">introduction</a>
+    <a href="introduction.html">Introduction</a>
     <a href="contract.html">Contract</a>
 </head>
 
