--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <a href="gwhitle.github.io">Home</a>
-    <a href="introduction.html">introduction</a>
+    <a href="introduction.html">Introduction</a>
     <a href="contract.html">Contract</a>
 </head>
 
