--- a/introduction.html
+++ b/introduction.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>introduction</title>
+    <title>Introduction</title>
     <link rel="stylesheet" href="styles.css">
 
 
     <a href="gwhitle.github.io">Home</a>
-    <a href="introduction.html">introduction</a>
+    <a href="introduction.html">Introduction</a>
     <a href="contract.html">Contract</a>
 </head>
 
