--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-
-
+    <p>This is the Homepage, where content should eventually be</p>
 
     <footer>
         Github LinkedIn Freecodecamp Codeacademy
