--- a/index.html
+++ b/index.html
@@ -4,22 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <link rel="stylesheet" href="styles.css">
-
-
-    <a href="gwhitle.github.io">Home</a>
-    <a href="introduction.html">Introduction</a>
-    <a href="contract.html">Contract</a>
+    <title>Gina W's Gawky Wraith | WEB115 / Index</title>
+    <link rel="stylesheet" href="./web115/styles/default.css">
 </head>
 
 <body>
-    <p>This is the Homepage, where content should eventually be</p>
+
+    <header>
+        <h1>Gina W's Gawky Wraith | WEB115 / Index</h1>
+        <nav class="menu">
+            <a href="./index.html">Home</a>
+            <a href="./web115/introduction.html">Introduction</a>
+            <a href="./web115/contract.html">Contract</a>
+        </nav>
+    </header>
+
+    <h2>Title Test Page</h2>
 
     <footer>
-        Github LinkedIn Freecodecamp Codeacademy
-        <br>
+        <hr>
+        <a href="https://github.com/gwhitle">Github</a>
+        <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
+        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
+        <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
+        <a href="https://jsfiddle.net/gwhitle/mvkLrxo5/">JSFiddle</a>
         Page Designed by WhitsGits
+        <hr>
+        <a href="https://validator.w3.org/check?uri=referer"><img src="./web115/images/html_validation_button.gif"></a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img
+                src="./web115/images/validation_button_css_rectangle_blue.gif"></a>
     </footer>
 
 </body>
