--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -21,6 +21,8 @@
 
     <h2>Introduction</h2>
 
+    <img src="./images/gatthewaterfall.jpg" width="300" height="300">
+
     <p>Personal background: Born in NC</p>
     <p>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while transitioning
         to a new career.</p>
