--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -21,7 +21,7 @@
 
     <h2>Introduction</h2>
 
-    <img src="./images/gatthewaterfall.jpg" width="300" height="300">
+    <img src="./images/small_gatthewaterfall.jpg">
 
     <p>Personal background: Born in NC</p>
     <p>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while transitioning
