--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -22,8 +22,8 @@
     </p>
     <hr>
     <h2>Gallery</h2>
-    <img src="./images/map1.png" width="450em" height="450em">
-    <img src="./images/map2.png" width="450em" height="450em">
+    <img src="./images/map1.png" alt="image of map 1" width="450" height="450">
+    <img src="./images/map2.png" alt="image of map 2" width="450" height="450">
     <hr>
     <h2>Colors</h2>
     <ul class="colorsList">
@@ -60,8 +60,9 @@
         <br>
         Page Designed by WhitsGits
         <hr>
-        <a href="https://validator.w3.org/check?uri=referer"><img src="./images/html_validation_button.gif"></a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img
+        <a href="https://validator.w3.org/check?uri=referer"><img src="./images/html_validation_button.gif"
+                alt="html validation image"></a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer" alt="css validation image"><img
                 src="./images/validation_button_css_rectangle_blue.gif"></a>
     </footer>
 </body>
