--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         <br>
         Page Designed by WhitsGits
         <hr>
-        <a href="https://validator.w3.org/check?uri=referer"><img src="./web115/images/html_validation_button.gif"></a>
+        <a href="https://validator.w3.org/check?uri=referer"><img src="./web115/images/html_validation_button.gif"
+                alt="html validation image"></a>
         <a href="https://jigsaw.w3.org/css-validator/check/referer"><img
-                src="./web115/images/validation_button_css_rectangle_blue.gif"></a>
+                src="./web115/images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
     </footer>
 
 </body>
