alt text update

--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -62,8 +62,8 @@
         <hr>
         <a href="https://validator.w3.org/check?uri=referer"><img src="./images/html_validation_button.gif"
                 alt="html validation image"></a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer" alt="css validation image"><img
-                src="./images/validation_button_css_rectangle_blue.gif"></a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img
+                src="./images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
     </footer>
 </body>
 
