--- a/web115/index.html
+++ b/web115/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gina W's Gawky Wraith | WEB115 / Index</title>
-    <link rel="stylesheet" href="./web115/styles/default.css">
+    <link rel="stylesheet" href="./styles/default.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <h2>Title Test Page</h2>
+    <h2>Web115 Home</h2>
 
     <footer>
         <hr>
@@ -31,10 +31,11 @@
         <br>
         Page Designed by WhitsGits
         <hr>
-        <a href="https://validator.w3.org/check?uri=referer"><img src="./web115/images/html_validation_button.gif"
-                alt="html validation image"></a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img
-                src="./web115/images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html"
+            target="_blank"><img src="./web115/images/html_validation_button.gif" alt="html validation image"></a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+            target="_blank"><img src="./web115/images/validation_button_css_rectangle_blue.gif"
+                alt="css validation image"></a>
     </footer>
 
 </body>
