--- a/web115/index.html
+++ b/web115/index.html
@@ -14,8 +14,8 @@
         <h1>Gina W's Gawky Wraith | WEB115 / Index</h1>
         <nav class="menu">
             <a href="./index.html">Home</a>
-            <a href="./web115/introduction.html">Introduction</a>
-            <a href="./web115/contract.html">Contract</a>
+            <a href="./introduction.html">Introduction</a>
+            <a href="./contract.html">Contract</a>
         </nav>
     </header>
 
@@ -24,6 +24,7 @@
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
+        <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
         <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
