--- a/web115/contract.html
+++ b/web115/contract.html
@@ -35,6 +35,7 @@
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
+        <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
         <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
@@ -42,9 +43,10 @@
         <br>
         Page Designed by WhitsGits
         <hr>
-        <a href="https://validator.w3.org/check?uri=referer"><img src="./images/html_validation_button.gif"></a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img
-                src="./images/validation_button_css_rectangle_blue.gif"></a>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html"
+            target="_blank"><img src="./images/html_validation_button.gif" alt="html validation"></a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+            target="_blank"><img src="./images/validation_button_css_rectangle_blue.gif" alt="css validation"></a>
     </footer>
 
 </body>
