--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Gina W's Gawky Wraith | WEB115 / Introduction</h1>
         <nav class="menu">
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
         </nav>
@@ -21,7 +21,7 @@
 
     <h2>Introduction</h2>
 
-    <img src="./images/small_gatthewaterfall.jpg">
+    <img src="./images/small_gatthewaterfall.jpg" alt="g at the waterfall">
 
     <p>Personal background: Born in NC</p>
     <p>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while transitioning
@@ -42,6 +42,7 @@
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
+        <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
         <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
@@ -49,9 +50,10 @@
         <br>
         Page Designed by WhitsGits
         <hr>
-        <a href="https://validator.w3.org/check?uri=referer"><img src="./images/html_validation_button.gif"></a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer"><img
-                src="./images/validation_button_css_rectangle_blue.gif"></a>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html"
+            target="_blank"><img src="./images/html_validation_button.gif" alt="html validation"></a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+            target="_blank"><img src="./images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
     </footer>
 
 </body>
