--- a/web115/contract.html
+++ b/web115/contract.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Gina W's Gawky Wraith | WEB115 / Course Contract</h1>
         <nav class="menu">
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
         </nav>
