Updated Root Index
Added new M2 Brand Project to the Root Index List for Web115

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="./web115/index.html">Index - Web115</a></li>
                 <li><a href="./web115/introduction.html">Introduction</a></li>
                 <li><a href="./web115/contract.html">Contract</a></li>
+                <li><a href="./web115/m2brand.html">M2 Brand - Digital Dungeons</a></li>
             </ul>
         </nav>
     </section>
