--- a/web115/contract.html
+++ b/web115/contract.html
@@ -35,6 +35,7 @@
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
+        <a href="https://gwhitle.github.io/">Github.io</a>
         <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
         <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
