Updated links, file paths, and changed dividers in titles
Updated links, file paths, and changed dividers in titles

--- a/web115/contract.html
+++ b/web115/contract.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gina W's Gawky Wraith | WEB115 / Course Contract</title>
+    <title>Gina W's Gawky Wraith | WEB115 | Course Contract</title>
     <link rel="stylesheet" href="./styles/default.css">
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <h1>Gina W's Gawky Wraith | WEB115 / Course Contract</h1>
         <nav class="menu">
-            <a href="./index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
         </nav>
@@ -21,7 +21,7 @@
     <h2>Course Contract</h2>
 
     <p>I, <a href="introduction.html">G. Whitley</a>, agree to abide by the terms in my Fall 2023 WEB115-N801:
-        Web Markup and Scripting with my instructor, Dr. Von Briesen.</p>
+        Web Markup and Scripting with my instructor, Dr. von Briesen.</p>
 
     <p>I understand that all work that I do on my school and personal websites
         will be publicly available to the world. I will not put information there that is inappropriate for schoolwork,
@@ -45,9 +45,9 @@
         Page Designed by WhitsGits
         <hr>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html"
-            target="_blank"><img src="./images/html_validation_button.gif" alt="html validation"></a>
+            target="_blank"><img src="/images/html_validation_button.gif" alt="html validation"></a>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="./images/validation_button_css_rectangle_blue.gif" alt="css validation"></a>
+            target="_blank"><img src="/images/validation_button_css_rectangle_blue.gif" alt="css validation"></a>
     </footer>
 
 </body>
