--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gwhitle.github.io</title>
-    <link rel="stylesheet" href="./web115/styles/default.css">
+    <link rel="stylesheet" href="/web115/styles/default.css">
 </head>
 
 <body>
 
     <header>
-        <h1>gwhitle.github.io / Root Index</h1>
+        <h1>gwhitle.github.io | Root Index</h1>
     </header>
 
-    <h2><em>Index by Folder / Project:</em></h2>
+    <h2><em>Index by Folder | Project:</em></h2>
 
     <section class="web115">
         <h3>Web115:</h3>
         <nav class="web115_links">
             <ul>
-                <li><a href="./web115/index.html">Index - Web115</a></li>
-                <li><a href="./web115/introduction.html">Introduction</a></li>
-                <li><a href="./web115/contract.html">Contract</a></li>
-                <li><a href="./web115/m2brand.html">M2 Brand - Digital Dungeons</a></li>
+                <li><a href="/web115/index.html">Index - Web115</a></li>
+                <li><a href="/web115/introduction.html">Introduction</a></li>
+                <li><a href="/web115/contract.html">Contract</a></li>
+                <li><a href="/web115/m2brand.html">M2 Brand - Digital Dungeons</a></li>
             </ul>
         </nav>
     </section>
@@ -34,16 +34,16 @@
         <a href="https://gwhitle.github.io/">Github.io</a>
         <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/gwhitle/mvkLrxo5/">JSFiddle</a>
+        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <br>
         Page Designed by WhitsGits
         <hr>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2F" target="_blank"><img
-                src="./web115/images/html_validation_button.gif" alt="html validation image"></a>
+                src="/web115/images/html_validation_button.gif" alt="html validation image"></a>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src=" ./web115/images/validation_button_css_rectangle_blue.gif"
+            target="_blank"><img src=" /web115/images/validation_button_css_rectangle_blue.gif"
                 alt="css validation image"></a>
     </footer>
 
