--- a/web115/index.html
+++ b/web115/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gina W's Gawky Wraith | WEB115 / Index</title>
-    <link rel="stylesheet" href="./styles/default.css">
+    <title>Gina W's Gawky Wraith | WEB115 | Index</title>
+    <link rel="stylesheet" href="/styles/default.css">
 </head>
 
 <body>
@@ -13,9 +13,9 @@
     <header>
         <h1>Gina W's Gawky Wraith | WEB115 / Index</h1>
         <nav class="menu">
-            <a href="./index.html">Home</a>
-            <a href="./introduction.html">Introduction</a>
-            <a href="./contract.html">Contract</a>
+            <a href="/index.html">Home</a>
+            <a href="/introduction.html">Introduction</a>
+            <a href="/contract.html">Contract</a>
         </nav>
     </header>
 
@@ -27,16 +27,16 @@
         <a href="https://gwhitle.github.io/">Github.io</a>
         <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/gwhitle/mvkLrxo5/">JSFiddle</a>
+        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <br>
         Page Designed by WhitsGits
         <hr>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html"
-            target="_blank"><img src="./images/html_validation_button.gif" alt="html validation image"></a>
+            target="_blank"><img src="/images/html_validation_button.gif" alt="html validation image"></a>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="./images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
+            target="_blank"><img src="/images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
     </footer>
 
 </body>
