--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gina W's Gawky Wraith | WEB115 / Introduction</title>
+    <title>Gina W's Gawky Wraith | WEB115 | Introduction</title>
     <link rel="stylesheet" href="./styles/default.css">
 </head>
 
@@ -45,9 +45,9 @@
         <a href="https://gwhitle.github.io/">Github.io</a>
         <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/gwhitle/mvkLrxo5/">JSFiddle</a>
+        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <br>
         Page Designed by WhitsGits
         <hr>
