--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Dungeons | Brand Guide</title>
-    <link rel="stylesheet" href="./styles/m2brand_default.css">
+    <link rel="stylesheet" href="/styles/m2brand_default.css">
 </head>
 
 <body>
@@ -22,8 +22,8 @@
     </p>
     <hr>
     <h2>Gallery</h2>
-    <img src="./images/map1.png" alt="image of map 1" width="450" height="450">
-    <img src="./images/map2.png" alt="image of map 2" width="450" height="450">
+    <img src="/images/map1.png" alt="image of map 1" width="450" height="450">
+    <img src="/images/map2.png" alt="image of map 2" width="450" height="450">
     <hr>
     <h2>Colors</h2>
     <ul class="colorsList">
@@ -56,17 +56,17 @@
         <a href="https://gwhitle.github.io/">Github.io</a>
         <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/gwhitle/mvkLrxo5/">JSFiddle</a>
+        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>   
+        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <br>
         Page Designed by WhitsGits
         <hr>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html"><img
-                src="./images/html_validation_button.gif" alt="html validation image"></a>
+                src="/images/html_validation_button.gif" alt="html validation image"></a>
         <a
             href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img
-                src="./images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
+                src="/images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
     </footer>
 </body>
 
