--- a/web115/contract.html
+++ b/web115/contract.html
@@ -38,9 +38,9 @@
         <a href="https://gwhitle.github.io/">Github.io</a>
         <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/gwhitle/mvkLrxo5/">JSFiddle</a>
+        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <br>
         Page Designed by WhitsGits
         <hr>
