fixed broken links
fixed broken links

--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -11,6 +11,13 @@
 <body>
     <header>
         <h1>Digital Dungeons | Logo </h1>
+        <nav class="menu">
+            <a href="web115/index.html">Home</a>
+            <a href="web115/introduction.html">Introduction</a>
+            <a href="web115/contract.html">Contract</a>
+            <a href="web115/m2brand.html">Brand</a>
+        </nav>
+    </header>
     </header>
 
     <h2>Welcome to Digital Dungeons,</h2>
@@ -57,7 +64,7 @@
         <a href="https://gwhitle.github.io/web115/index.html">Web115.io</a>
         <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
         <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>   
+        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
         <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
         <br>
         Page Designed by WhitsGits
