--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gwhitle.github.io</title>
-    <link rel="stylesheet" href="/web115/styles/default.css">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 
 <body>
