--- a/web115/index.html
+++ b/web115/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gina W's Gawky Wraith | WEB115 | Index</title>
-    <link rel="stylesheet" href="/styles/default.css">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 
 <body>
@@ -13,9 +13,10 @@
     <header>
         <h1>Gina W's Gawky Wraith | WEB115 / Index</h1>
         <nav class="menu">
-            <a href="/index.html">Home</a>
-            <a href="/introduction.html">Introduction</a>
-            <a href="/contract.html">Contract</a>
+            <a href="web115/index.html">Home</a>
+            <a href="web115/introduction.html">Introduction</a>
+            <a href="web115/contract.html">Contract</a>
+            <a href="web115/m2brand.html">Brand</a>
         </nav>
     </header>
 
