--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -10,12 +10,12 @@
 
 <body>
 
-    <header>
-        <h1>Gina W's Gawky Wraith | WEB115 / Introduction</h1>
-        <nav class="menu">
-            <a href="./index.html">Home</a>
-            <a href="introduction.html">Introduction</a>
-            <a href="contract.html">Contract</a>
+    <h1>Gina W's Gawky Wraith | WEB115 / Index</h1>
+    <nav class="menu">
+        <a href="web115/index.html">Home</a>
+        <a href="web115/introduction.html">Introduction</a>
+        <a href="web115/contract.html">Contract</a>
+        <a href="web115/m2brand.html">Brand</a>
         </nav>
     </header>
 
