--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Dungeons | Brand Guide</title>
-    <link rel="stylesheet" href="/styles/m2brand_default.css">
+    <link rel="stylesheet" href="styles/m2brand_default.css">
 </head>
 
 <body>
