fixed more links
fixed more links

--- a/web115/contract.html
+++ b/web115/contract.html
@@ -12,10 +12,10 @@
     <header>
         <h1>Gina W's Gawky Wraith | WEB115 / Course Contract</h1>
         <nav class="menu">
-            <a href="web115/index.html">Home</a>
-            <a href="web115/introduction.html">Introduction</a>
-            <a href="web115/contract.html">Contract</a>
-            <a href="web115/m2brand.html">Brand</a>
+            <a href="index.html">Home</a>
+            <a href="introduction.html">Introduction</a>
+            <a href="contract.html">Contract</a>
+            <a href="m2brand.html">Brand</a>
         </nav>
     </header>
 
