updated page dividers
updated page dividers

--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -10,13 +10,13 @@
 
 <body>
 
-    <h1>Gina W's Gawky Wraith | WEB115 / Index</h1>
+    <h1>Gina W's Gawky Wraith | WEB115 | Introduction/h1>
     <nav class="menu">
         <a href="index.html">Home</a>
         <a href="introduction.html">Introduction</a>
         <a href="contract.html">Contract</a>
         <a href="m2brand.html">Brand</a>
-        </nav>
+    </nav>
     </header>
 
     <h2>Introduction</h2>
