--- a/web115/contract.html
+++ b/web115/contract.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Gina W's Gawky Wraith | WEB115 / Course Contract</h1>
+        <h1>Gina W's Gawky Wraith | WEB115 | Course Contract</h1>
         <nav class="menu">
             <a href="index.html">Home</a>
             <a href="introduction.html">Introduction</a>
