--- a/web115/index.html
+++ b/web115/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1>Gina W's Gawky Wraith | WEB115 / Index</h1>
+        <h1>Gina W's Gawky Wraith | WEB115 | Index</h1>
         <nav class="menu">
             <a href="index.html">Home</a>
             <a href="introduction.html">Introduction</a>
