fixed error in h1
fixed error in h1

--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gina W's Gawky Wraith | WEB115 | Introduction</title>
-    <link rel="stylesheet" href="./styles/default.css">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 
 <body>
 
-    <h1>Gina W's Gawky Wraith | WEB115 | Introduction/h1>
+    <h1>Gina W's Gawky Wraith | WEB115 | Introduction </h1>
     <nav class="menu">
         <a href="index.html">Home</a>
         <a href="introduction.html">Introduction</a>
