--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -21,7 +21,7 @@
 
     <h2>Introduction</h2>
 
-    <img src="./images/small_gatthewaterfall.jpg" alt="g at the waterfall">
+    <img src="images/small_gatthewaterfall.jpg" alt="g at the waterfall">
 
     <p>Personal background: Born in NC</p>
     <p>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while transitioning
@@ -52,9 +52,9 @@
         Page Designed by WhitsGits
         <hr>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html"
-            target="_blank"><img src="./images/html_validation_button.gif" alt="html validation"></a>
+            target="_blank"><img src="images/html_validation_button.gif" alt="html validation"></a>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="./images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
+            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
     </footer>
 
 </body>
