--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -29,8 +29,8 @@
     </p>
     <hr>
     <h2>Gallery</h2>
-    <img src="/images/map1.png" alt="image of map 1" width="450" height="450">
-    <img src="/images/map2.png" alt="image of map 2" width="450" height="450">
+    <img src="images/map1.png" alt="image of map 1" width="450" height="450">
+    <img src="images/map2.png" alt="image of map 2" width="450" height="450">
     <hr>
     <h2>Colors</h2>
     <ul class="colorsList">
@@ -70,10 +70,10 @@
         Page Designed by WhitsGits
         <hr>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html"><img
-                src="/images/html_validation_button.gif" alt="html validation image"></a>
+                src="images/html_validation_button.gif" alt="html validation image"></a>
         <a
             href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img
-                src="/images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
+                src="images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
     </footer>
 </body>
 
