--- a/web115/contract.html
+++ b/web115/contract.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gina W's Gawky Wraith | WEB115 | Course Contract</title>
-    <link rel="stylesheet" href="./styles/default.css">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 
 <body>
@@ -46,9 +46,9 @@
         Page Designed by WhitsGits
         <hr>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html"
-            target="_blank"><img src="/images/html_validation_button.gif" alt="html validation"></a>
+            target="_blank"><img src="images/html_validation_button.gif" alt="html validation"></a>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="/images/validation_button_css_rectangle_blue.gif" alt="css validation"></a>
+            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validation"></a>
     </footer>
 
 </body>
