--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gwhitle.github.io</title>
-    <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="/web115/styles/default.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <h3>Web115:</h3>
         <nav class="web115_links">
             <ul>
-                <li><a href="/web115/index.html">Index - Web115</a></li>
+                <li><a href="web115/index.html">Index - Web115</a></li>
             </ul>
         </nav>
     </section>
@@ -38,9 +38,9 @@
         Page Designed by WhitsGits
         <hr>
         <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2F" target="_blank"><img
-                src="images/html_validation_button.gif" alt="html validation image"></a>
+                src="web115/images/html_validation_button.gif" alt="html validation image"></a>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif"
+            target="_blank"><img src="web115/images/validation_button_css_rectangle_blue.gif"
                 alt="css validation image"></a>
     </footer>
 
