--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-
-    <h1>Gina W's Gawky Wraith | WEB115 | Introduction </h1>
-    <nav class="menu">
-        <a href="index.html">Home</a>
-        <a href="introduction.html">Introduction</a>
-        <a href="contract.html">Contract</a>
-        <a href="m2brand.html">Brand</a>
-    </nav>
+    <header>
+        <h1>Gina W's Gawky Wraith | WEB115 | Introduction </h1>
+        <nav class="menu">
+            <a href="index.html">Home</a>
+            <a href="introduction.html">Introduction</a>
+            <a href="contract.html">Contract</a>
+            <a href="m2brand.html">Brand</a>
+        </nav>
     </header>
 
     <h2>Introduction</h2>
