--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -20,9 +20,10 @@
     </header>
 
     <h2>Introduction</h2>
-
-    <img src="images/small_gatthewaterfall.jpg" alt="g at the waterfall">
-
+    <figure>
+        <img src="images/small_gatthewaterfall.jpg" alt="g at the waterfall">
+        <figcaption class="waterfallImg">avoiding the camera at a waterfall</figcaption>
+    </figure>
     <p>Personal background: Born in NC</p>
     <p>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while transitioning
         to a new career.</p>
