Added h2 info and p to index
Added h2 info and p to web115index

--- a/web115/index.html
+++ b/web115/index.html
@@ -19,7 +19,8 @@
         </nav>
     </header>
 
-    <h2>Web115 Index</h2>
+    <h2>Web115 Index | Gina's Home</h2>
+    <p>This is my Web115 index</p>
 
     <footer>
         <hr>
