added all missing main tags
added all missing main tags

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <header>
         <h1>gwhitle.github.io | Root Index</h1>
     </header>
+    <main>
+        <h2><em>Index by Folder | Project:</em></h2>
 
-    <h2><em>Index by Folder | Project:</em></h2>
-
-    <section class="web115">
-        <h3>Web115:</h3>
-        <nav class="web115_links">
-            <ul>
-                <li><a href="web115/index.html">Index - Web115</a></li>
-            </ul>
-        </nav>
-    </section>
-
+        <section class="web115">
+            <h3>Web115:</h3>
+            <nav class="web115_links">
+                <ul>
+                    <li><a href="web115/index.html">Index - Web115</a></li>
+                </ul>
+            </nav>
+        </section>
+    </main>
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
