--- a/web115/index.html
+++ b/web115/index.html
@@ -18,10 +18,10 @@
             <a href="m2brand.html">Brand</a>
         </nav>
     </header>
-
-    <h2>Web115 Index | Gina's Home</h2>
-    <p>This is my Web115 index</p>
-
+    <main>
+        <h2>Web115 Index | Gina's Home</h2>
+        <p>This is my Web115 index</p>
+    </main>
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
