--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -18,28 +18,31 @@
             <a href="m2brand.html">Brand</a>
         </nav>
     </header>
-
-    <h2>Introduction</h2>
-    <figure>
-        <img src="images/small_gatthewaterfall.jpg" alt="g at the waterfall">
-        <figcaption class="waterfallImg">avoiding the camera at a waterfall</figcaption>
-    </figure>
-    <p>Personal background: Born in NC</p>
-    <p>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while transitioning
-        to a new career.</p>
-    <p>Academic Background: Full Stack Development Student in progress.</p>
-    <p>Background in this Subject: I have taken the intro WEB-110 class, as well as most other introductory courses
-        including CIS-115, DBA-110, and CSC-151.</p>
-    <p>Primary Computer Platform: Windows 10, I used to dual boot Windows and Linux(Ubuntu) to try a new OS, I enjoyed
-        it but recently reverted back.</p>
-    <p>Courses I'm in & Why:</p>
-    <ul>
-        <li>WEB115 - Web Markup and Scripting : Major Requirement</li>
-    </ul>
-    <p>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling through
-        books, film/TV/media, and video/ tabletop games! Give me a game or media with a half decent mythos and I’m sold!
-    </p>
-
+    <main>
+        <h2>Introduction</h2>
+        <figure>
+            <img src="images/small_gatthewaterfall.jpg" alt="g at the waterfall">
+            <figcaption class="waterfallImg">avoiding the camera at a waterfall</figcaption>
+        </figure>
+        <p>Personal background: Born in NC</p>
+        <p>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while
+            transitioning
+            to a new career.</p>
+        <p>Academic Background: Full Stack Development Student in progress.</p>
+        <p>Background in this Subject: I have taken the intro WEB-110 class, as well as most other introductory courses
+            including CIS-115, DBA-110, and CSC-151.</p>
+        <p>Primary Computer Platform: Windows 10, I used to dual boot Windows and Linux(Ubuntu) to try a new OS, I
+            enjoyed
+            it but recently reverted back.</p>
+        <p>Courses I'm in & Why:</p>
+        <ul>
+            <li>WEB115 - Web Markup and Scripting : Major Requirement</li>
+        </ul>
+        <p>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling through
+            books, film/TV/media, and video/ tabletop games! Give me a game or media with a half decent mythos and I’m
+            sold!
+        </p>
+    </main>
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
