--- a/web115/contract.html
+++ b/web115/contract.html
@@ -18,21 +18,21 @@
             <a href="m2brand.html">Brand</a>
         </nav>
     </header>
+    <main>
+        <h2>Course Contract</h2>
+        <p>I, <a href="introduction.html">G. Whitley</a>, agree to abide by the terms in my Fall 2023 WEB115-N801:
+            Web Markup and Scripting with my instructor, Dr. von Briesen.</p>
 
-    <h2>Course Contract</h2>
+        <p>I understand that all work that I do on my school and personal websites
+            will be publicly available to the world. I will not put information there that is inappropriate for
+            schoolwork,
+            or that I wish to keep private.</p>
 
-    <p>I, <a href="introduction.html">G. Whitley</a>, agree to abide by the terms in my Fall 2023 WEB115-N801:
-        Web Markup and Scripting with my instructor, Dr. von Briesen.</p>
+        <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
+            failure to turn in assignments may show as absences.</p>
 
-    <p>I understand that all work that I do on my school and personal websites
-        will be publicly available to the world. I will not put information there that is inappropriate for schoolwork,
-        or that I wish to keep private.</p>
-
-    <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
-        failure to turn in assignments may show as absences.</p>
-
-    <p>Signed: G Whitley, 20 August, 2023</p>
-
+        <p>Signed: G Whitley, 20 August, 2023</p>
+    </main>
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
