--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -18,44 +18,46 @@
             <a href="m2brand.html">Brand</a>
         </nav>
     </header>
-
-    <h2>Welcome to Digital Dungeons,</h2>
-    <p> where our mission is to be the conduit for your creative endeavors in the world of
-        RPG mapping. We believe that every map is a tapestry of narratives waiting to be woven, and we're here to
-        provide a canvas for your storytelling prowess. By offering a treasure trove of original maps, we aim to enable
-        epic journeys that captivate, inspire, and transport both players and creators alike.</p>
-    <p class="tagline"><em>Forging Epic Journeys: Your Portal to Original RPG Maps - Welcome to Digital Dungeons</em>
-    </p>
-    <hr>
-    <h2>Gallery</h2>
-    <img src="images/map1.png" alt="image of map 1" width="450" height="450">
-    <img src="images/map2.png" alt="image of map 2" width="450" height="450">
-    <hr>
-    <h2>Colors</h2>
-    <ul class="colorsList">
-        <li class="c-bgcolor">
-            <p>#E5C293<br>Bg color</p>
-        </li>
-        <li class="c-accent1">
-            <p>#A17751<br>Accent1</p>
-        </li>
-        <li class="c-accent2">
-            <p>#B94527<br>Accent2</p>
-        </li>
-        <li class="c-titles">
-            <p>#F8B45C<br>Titles</p>
-        </li>
-        <li class="c-text">
-            <p>#393E41<br>Text</p>
-        </li>
-    </ul>
-    <hr>
-    <h2>Fonts</h2>
-    <h3 class="couriernew">Courier New</h3>
-    <p class="couriernew">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-    <h3 class="monospace">Monospace</h3>
-    <p class="monospace">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-
+    <main>
+        <h2>Welcome to Digital Dungeons,</h2>
+        <p> where our mission is to be the conduit for your creative endeavors in the world of
+            RPG mapping. We believe that every map is a tapestry of narratives waiting to be woven, and we're here to
+            provide a canvas for your storytelling prowess. By offering a treasure trove of original maps, we aim to
+            enable
+            epic journeys that captivate, inspire, and transport both players and creators alike.</p>
+        <p class="tagline"><em>Forging Epic Journeys: Your Portal to Original RPG Maps - Welcome to Digital
+                Dungeons</em>
+        </p>
+        <hr>
+        <h2>Gallery</h2>
+        <img src="images/map1.png" alt="image of map 1" width="450" height="450">
+        <img src="images/map2.png" alt="image of map 2" width="450" height="450">
+        <hr>
+        <h2>Colors</h2>
+        <ul class="colorsList">
+            <li class="c-bgcolor">
+                <p>#E5C293<br>Bg color</p>
+            </li>
+            <li class="c-accent1">
+                <p>#A17751<br>Accent1</p>
+            </li>
+            <li class="c-accent2">
+                <p>#B94527<br>Accent2</p>
+            </li>
+            <li class="c-titles">
+                <p>#F8B45C<br>Titles</p>
+            </li>
+            <li class="c-text">
+                <p>#393E41<br>Text</p>
+            </li>
+        </ul>
+        <hr>
+        <h2>Fonts</h2>
+        <h3 class="couriernew">Courier New</h3>
+        <p class="couriernew">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+        <h3 class="monospace">Monospace</h3>
+        <p class="monospace">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+    </main>
     <footer>
         <hr>
         <a href="https://github.com/gwhitle">Github</a>
