fixed github.io bullet spacing
fixed github.io bullet spacing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h3>Web115:</h3>
             <nav class="web115_links">
                 <ul>
-                    <li><a href="web115/index.html">Index - Web115</a></li>
+                    <li class="web115Index"><a href="web115/index.html">Index - Web115</a></li>
                 </ul>
             </nav>
         </section>
