--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <section class="web115">
             <h3>Web115:</h3>
             <nav class="web115_links">
-                <ul>
-                    <li class="web115Index"><a href="web115/index.html">Index - Web115</a></li>
+                <ul class="web115Index">
+                    <li><a href="web115/index.html">Index - Web115</a></li>
                 </ul>
             </nav>
         </section>
