added TOC to nav in all pages
added TOC to nav in all pages

--- a/web115/contract.html
+++ b/web115/contract.html
@@ -13,6 +13,7 @@
         <h1>Gina W's Gawky Wraith | WEB115 | Course Contract</h1>
         <nav class="menu">
             <a href="index.html">Home</a>
+            <a href="toc.html">Table of Contents</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
             <a href="m2brand.html">Brand</a>
