--- a/web115/toc.html
+++ b/web115/toc.html
@@ -26,7 +26,7 @@
                     <li><a href="toc.html">Table of Contents</a></li>
                     <li><a href="introduction.html">Introduction</a></li>
                     <li><a href="contract.html">Contract</a></li>
-                    <li><a href="m2brand.html">M2 Brand - Digital Dungeons</a></li>
+                    <li><a href="m2brand.html">Brand</a></li>
                 </ul>
             </nav>
         </section>
