--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -13,6 +13,7 @@
         <h1>Digital Dungeons | Logo </h1>
         <nav class="menu">
             <a href="index.html">Home</a>
+            <a href="toc.html">Table of Contents</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
             <a href="m2brand.html">Brand</a>
