TOC paragraph update
TOC paragraph update

--- a/web115/toc.html
+++ b/web115/toc.html
@@ -15,7 +15,8 @@
 
     <main>
         <h2>Table of Contents</h2>
-        <p>This is the Table of Contents for Gina W's WEB115 <br>
+        <p>This is the Table of Contents for Gina W's WEB115. <br>
+            This page will be frequently updated with new creations and updates for this course.<br>
             You can learn more about me from my <br>
             <a href="introduction.html">Introduction Page here!</a>
         </p>
