--- a/web115/toc.html
+++ b/web115/toc.html
@@ -20,7 +20,7 @@
             You can learn more about me from my <br>
             <a href="introduction.html">Introduction Page here!</a>
         </p>
-        <section>
+        <div>
             <nav class="navToc">
                 <ul class="ulToc">
                     <li><a href="index.html">Home</a></li>
@@ -29,7 +29,7 @@
                     <li><a href="m2brand.html">Brand</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
     </main>
 
     <footer>
