added missing target blanks
added missing target blanks

--- a/web115/toc.html
+++ b/web115/toc.html
@@ -44,11 +44,10 @@
         <br>
         Page Designed by WhitsGits
         <hr>
-        <a href="https://validator.w3.org/check?uri=https://gwhitle.github.io/web115/toc.html"><img
+        <a href="https://validator.w3.org/check?uri=https://gwhitle.github.io/web115/toc.html " target="_blank"><img
                 src="images/html_validation_button.gif" alt="html validation image"></a>
-        <a
-            href="hhttps://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Ftoc.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img
-                src="images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Ftoc.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
     </footer>
 
 </body>
