--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -71,11 +71,10 @@
         <br>
         Page Designed by WhitsGits
         <hr>
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html"><img
-                src="images/html_validation_button.gif" alt="html validation image"></a>
-        <a
-            href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img
-                src="images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html"
+            target="_blank"><img src="images/html_validation_button.gif" alt="html validation image"></a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
     </footer>
 </body>
 
