changed index paragraph
changed index paragraph

--- a/web115/index.html
+++ b/web115/index.html
@@ -21,7 +21,11 @@
     </header>
     <main>
         <h2>Web115 Index | Gina's Home</h2>
-        <p>This is my Web115 index</p>
+        <p>This is the Table of Contents for Gina W's WEB115. <br>
+            This page will be frequently updated with new creations and updates for this course.<br>
+            You can learn more about me from my <br>
+            <a href="introduction.html">Introduction Page here!</a>
+        </p>
     </main>
     <footer>
         <hr>
