Updated Main Nav, removed toc to be home page
Updated Main Nav, removed toc to be home page

--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Dungeons | Brand Guide</title>
-    <link rel="stylesheet" href="styles/m2brand_default.css">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 
 <body>
     <header>
-        <h1>Digital Dungeons | Logo </h1>
+        <h1 class="h1Brand">Digital Dungeons | Logo </h1>
         <nav class="menu">
             <a href="index.html">Home</a>
-            <a href="toc.html">Table of Contents</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
             <a href="m2brand.html">Brand</a>
