--- a/web115/index.html
+++ b/web115/index.html
@@ -13,15 +13,14 @@
         <h1>Gina W's Gawky Wraith | WEB115 | Index</h1>
         <nav class="menu">
             <a href="index.html">Home</a>
-            <a href="toc.html">Table of Contents</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
             <a href="m2brand.html">Brand</a>
         </nav>
     </header>
     <main>
-        <h2>Web115 Index | Gina's Home</h2>
-        <p>This is the Table of Contents for Gina W's WEB115. <br>
+        <h2>Gina's Homepage</h2>
+        <p>This is the Homepage for Gina's WEB115 course. <br>
             This page will be frequently updated with new creations and updates for this course.<br>
             You can learn more about me from my <br>
             <a href="introduction.html">Introduction Page here!</a>
