fixed root nav css
fixed root nav css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <section class="web115">
             <h3>Web115:</h3>
-            <nav class="web115_links">
+            <nav>
                 <ul class="web115Index">
                     <li><a href="web115/index.html">Index - Web115</a></li>
                 </ul>
