Removed /index.html from all web11.io links
Removed /index.html from all web11.io links

--- a/web115/contract.html
+++ b/web115/contract.html
@@ -41,7 +41,7 @@
         <nav>
             <a href="https://github.com/gwhitle">Github</a>
             <a href="https://gwhitle.github.io/">Github.io</a>
-            <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
+            <a href="https://gwhitle.github.io/web115/">web115.io</a>
             <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
             <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
             <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
