--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -54,7 +54,7 @@
 
             <a href="https://github.com/gwhitle">Github</a>
             <a href="https://gwhitle.github.io/">Github.io</a>
-            <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
+            <a href="https://gwhitle.github.io/web115">web115.io</a>
             <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
             <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
             <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
