--- a/web115/contract.html
+++ b/web115/contract.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Gina W's Gawky Wraith | WEB115 </h1>
-        <nav class="mainNav">
+        <nav>
             <a href="index.html">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
