classes on brand page removed
classes on brand page removed and changed to ids where needed

--- a/web115/brand.html
+++ b/web115/brand.html
@@ -17,7 +17,7 @@
             <a href="contract.html">Contract</a>
             <a href="brand.html">Brand</a>
         </nav>
-        <h1 class="h1Brand">Digital Dungeons | Logo </h1>
+        <h1 id="h1Brand">Digital Dungeons | Logo </h1>
     </header>
     <main>
         <h2>Welcome to Digital Dungeons,</h2>
@@ -26,7 +26,7 @@
             provide a canvas for your storytelling prowess. By offering a treasure trove of original maps, we aim to
             enable
             epic journeys that captivate, inspire, and transport both players and creators alike.</p>
-        <p class="tagline"><em>Forging Epic Journeys: Your Portal to Original RPG Maps - Welcome to Digital
+        <p id="brandTagline"><em>Forging Epic Journeys: Your Portal to Original RPG Maps - Welcome to Digital
                 Dungeons</em>
         </p>
         <hr>
@@ -35,29 +35,29 @@
         <img src="images/map2.png" alt="image of map 2" width="450" height="450">
         <hr>
         <h2>Colors</h2>
-        <ul class="colorsList">
-            <li class="c-bgcolor">
+        <ul id="colorsList">
+            <li id="c-bgcolor">
                 <p>#E5C293<br>Bg color</p>
             </li>
-            <li class="c-accent1">
+            <li id="c-accent1">
                 <p>#A17751<br>Accent1</p>
             </li>
-            <li class="c-accent2">
+            <li id="c-accent2">
                 <p>#B94527<br>Accent2</p>
             </li>
-            <li class="c-titles">
+            <li id="c-titles">
                 <p>#F8B45C<br>Titles</p>
             </li>
-            <li class="c-text">
+            <li id="c-text">
                 <p>#393E41<br>Text</p>
             </li>
         </ul>
         <hr>
         <h2>Fonts</h2>
-        <h3 class="couriernew">Courier New</h3>
-        <p class="couriernew">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-        <h3 class="monospace">Monospace</h3>
-        <p class="monospace">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+        <h3 id="couriernew">Courier New</h3>
+        <p id="couriernew">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+        <h3 id="monospace">Monospace</h3>
+        <p id="monospace">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
     </main>
     <footer>
         <hr>
