--- a/web115/index.html
+++ b/web115/index.html
@@ -20,13 +20,12 @@
     </header>
     <main>
         <h2>Homepage</h2>
-        <section class="indexParagraph1">
+        <div id="indexParagraph1">
             <p>This is the Homepage for Gina's WEB115 course. <br>
                 This page will be frequently updated with new creations and updates for this course.<br>
                 You can learn more about me from my <br>
                 <a href="introduction.html">Introduction Page here!</a>
             </p>
-        </section>
     </main>
     <footer>
         <hr>
