--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -24,7 +24,7 @@
             <img src="images/small_gatthewaterfall.jpg" alt="g at the waterfall">
             <figcaption class="waterfallImg">avoiding the camera at a waterfall</figcaption>
         </figure>
-        <ul class="introList">
+        <ul id="introList">
             <li>Personal background: Born in NC</li>
             <li>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while
                 transitioning
