--- a/web115/contract.html
+++ b/web115/contract.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h2>Course Contract</h2>
-        <section class="contractParagraph1">
+        <div id="contractParagraph1">
             <p>I, <a href="introduction.html">G. Whitley</a>, agree to abide by the terms in my Fall 2023 WEB115-N801:
                 Web Markup and Scripting with my instructor, Dr. von Briesen.</p>
 
@@ -34,7 +34,7 @@
                 failure to turn in assignments may show as absences.</p>
 
             <p>Signed: G Whitley, 20 August, 2023</p>
-        </section>
+            </div>
     </main>
     <footer>
         <hr>
