added missing closing of div
added missing closing of div to web115.io

--- a/web115/index.html
+++ b/web115/index.html
@@ -26,6 +26,7 @@
                 You can learn more about me from my <br>
                 <a href="introduction.html">Introduction Page here!</a>
             </p>
+        </div>
     </main>
     <footer>
         <hr>
