fixed list nesting
fixed list nesting

--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -36,10 +36,11 @@
             <li>Primary Computer Platform: Windows 10, I used to dual boot Windows and Linux(Ubuntu) to try a new OS, I
                 enjoyed
                 it but recently reverted back.</li>
-            <li>Courses I'm in & Why:</li>
-            <ul>
-                <li>WEB115 - Web Markup and Scripting : Major Requirement</li>
-            </ul>
+            <li>Courses I'm in & Why:
+                <ul>
+                    <li>WEB115 - Web Markup and Scripting : Major Requirement</li>
+                </ul>
+            </li>
             <li>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling
                 through
                 books, film/TV/media, and video/ tabletop games! Give me a game or media with a half decent mythos and
