updated brand validation links
updated brand validation links and fixed reused ids

--- a/web115/brand.html
+++ b/web115/brand.html
@@ -54,10 +54,14 @@
         </ul>
         <hr>
         <h2>Fonts</h2>
-        <h3 id="couriernew">Courier New</h3>
-        <p id="couriernew">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-        <h3 id="monospace">Monospace</h3>
-        <p id="monospace">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+        <div id="couriernew">
+            <h3>Courier New</h3>
+            <p>a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+        </div>
+        <div id="monospace">
+            <h3>Monospace</h3>
+            <p>a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+        </div>
     </main>
     <footer>
         <hr>
@@ -73,9 +77,9 @@
             <br>
             Page Designed by WhitsGits
             <hr>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html"
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fbrand.html"
                 target="_blank"><img src="images/html_validation_button.gif" alt="html validation image"></a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fbrand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
                 target="_blank"><img src="images/validation_button_css_rectangle_blue.gif"
                     alt="css validation image"></a>
         </nav>
