changed padding to margins
changed padding to margins. Used a div on the brand page paragraph as targeting just the main effects more of the page than wanted.

--- a/web115/brand.html
+++ b/web115/brand.html
@@ -21,6 +21,7 @@
     </header>
     <main>
         <h2>Welcome to Digital Dungeons,</h2>
+        <div id="brandParagraph1">
         <p> where our mission is to be the conduit for your creative endeavors in the world of
             RPG mapping. We believe that every map is a tapestry of narratives waiting to be woven, and we're here to
             provide a canvas for your storytelling prowess. By offering a treasure trove of original maps, we aim to
@@ -29,6 +30,7 @@
         <p id="brandTagline"><em>Forging Epic Journeys: Your Portal to Original RPG Maps - Welcome to Digital
                 Dungeons</em>
         </p>
+    </div>
         <hr>
         <h2>Gallery</h2>
         <img src="images/map1.png" alt="image of map 1" width="450" height="450">
