--- a/web115/index.html
+++ b/web115/index.html
@@ -21,9 +21,9 @@
     <main>
         <h2>Homepage</h2>
         <div id="indexParagraph1">
-            <p>This is the Homepage for Gina's WEB115 course. <br>
-                This page will be frequently updated with new creations and updates for this course.<br>
-                You can learn more about me from my <br>
+            <p>This is the Homepage for Gina's WEB115 course.
+                This page will be frequently updated with new creations and updates for this course.
+                You can learn more about me from my 
                 <a href="introduction.html">Introduction Page here!</a>
             </p>
         </div>
