web115 index h2 changed to home
web115 index h2 changed from homepage to home

--- a/web115/index.html
+++ b/web115/index.html
@@ -19,11 +19,11 @@
         </nav>
     </header>
     <main>
-        <h2>Homepage</h2>
+        <h2>Home</h2>
         <div id="indexParagraph1">
             <p>This is the Homepage for Gina's WEB115 course.
                 This page will be frequently updated with new creations and updates for this course.
-                You can learn more about me from my 
+                You can learn more about me from my
                 <a href="introduction.html">Introduction Page here!</a>
             </p>
         </div>
