--- a/web115/fizzbuzz0.html
+++ b/web115/fizzbuzz0.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gina W's Gawky Wraith | WEB115 | Index</title>
+    <title>Gina W's Gawky Wraith | WEB115 | Fizz Buzz 0</title>
     <link rel="stylesheet" href="styles/default.css">
+    <script src="scripts/fizzbuzz0.js" defer></script>
 </head>
 
 <body>
@@ -20,13 +21,31 @@
         </nav>
     </header>
     <main>
-        <h2>Home</h2>
-        <div id="indexParagraph1">
-            <p>This is the Homepage for Gina's WEB115 course.
-                This page will be frequently updated with new creations and updates for this course.
-                You can learn more about me from my
-                <a href="introduction.html">Introduction Page here!</a>
-            </p>
+        <h2 id="greeting">Welcome to Digital Dungeons</h2>
+        <form>
+            <fieldset>
+                <legend id="fizzLegend">Please enter your name</legend>
+                <p>
+                    <label for="firstName">First Name:</label>
+                    <input type="text" id="firstName" name="firstName" placeholder="Enter your first name here">
+                </p>
+                <p>
+                    <label for="middleInitial">Middle Initial:</label>
+                    <input type="text" id="middleInitial" name="middleInitial"
+                        placeholder="Enter your middle initial here">
+                </p>
+                <p>
+                    <label for="lastName">Last Name:</label>
+                    <input type="text" id="lastName" name="lastName" placeholder="Enter your last name here">
+                </p>
+                <p>
+                    <input type="reset" id="resetButton" name="resetButton" value="Reset">
+                    <input type="button" id="submitButton" name="submitButton" value="Submit">
+                </p>
+            </fieldset>
+        </form>
+        <div id="loopColumns">
+            <p id="loopText"></p>
         </div>
     </main>
     <footer>
