--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -16,6 +16,7 @@
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
             <a href="brand.html">Brand</a>
+            <a href="fizzbuzz0.html">Fizz Buzz 0</a>
         </nav>
     </header>
     <main>
