index.html page title changed
index.html page title changed from index to home, matching h2

--- a/web115/index.html
+++ b/web115/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gina W's Gawky Wraith | WEB115 | Index</title>
+    <title>Gina W's Gawky Wraith | WEB115 | Home</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 
