Added inlcude.js, added components folder
Added inlcude.js, added components folder for headers and footers

--- a/web115/fizzbuzz0.html
+++ b/web115/fizzbuzz0.html
@@ -10,16 +10,7 @@
 </head>
 
 <body>
-    <header>
-        <h1>Gina W's Gawky Wraith | WEB115</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="introduction.html">Introduction</a>
-            <a href="contract.html">Contract</a>
-            <a href="brand.html">Brand</a>
-            <a href="fizzbuzz0.html">Fizz Buzz 0</a>
-        </nav>
-    </header>
+    <div data-include="components/header.html"></div>
     <main>
         <h2 id="greeting">Welcome to Digital Dungeons</h2>
         <form>
@@ -48,27 +39,8 @@
             <p id="loopText"></p>
         </div>
     </main>
-    <footer>
-        <hr>
-        <nav>
-
-            <a href="https://github.com/gwhitle">Github</a>
-            <a href="https://gwhitle.github.io/">Github.io</a>
-            <a href="https://gwhitle.github.io/web115/">web115.io</a>
-            <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-            <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-            <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
-            <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
-            <br>
-            Page Designed by WhitsGits
-            <hr>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Ffizzbuzz0.html"
-                target="_blank"><img src="images/html_validation_button.gif" alt="html validation image"></a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Ffizzbuzz0.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-                target="_blank"><img src="images/validation_button_css_rectangle_blue.gif"
-                    alt="css validation image"></a>
-        </nav>
-    </footer>
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/include.js"></script>
 </body>
 
 </html>
