Updated Nav and H2 css
Updated Nav and H2 css

--- a/web115/contract.html
+++ b/web115/contract.html
@@ -11,7 +11,7 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2>Course Contract</h2>
+        <h2 id="h2Main">Course Contract</h2>
         <div id="contractParagraph1">
             <p>I, <a href="introduction.html">G. Whitley</a>, agree to abide by the terms in my Fall 2023 WEB115-N801:
                 Web Markup and Scripting with my instructor, Dr. von Briesen.</p>
