--- a/web115/index.html
+++ b/web115/index.html
@@ -11,7 +11,7 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2>Home</h2>
+        <h2 id="h2Main">Home</h2>
         <div id="indexParagraph1">
             <p>This is the Homepage for Gina's WEB115 course.
                 This page will be frequently updated with new creations and updates for this course.
