--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -11,7 +11,7 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2>Introduction</h2>
+        <h2 id="h2Main">Introduction</h2>
         <figure>
             <img src="images/small_gatthewaterfall.jpg" alt="g at the waterfall">
             <figcaption class="waterfallImg">avoiding the camera at a waterfall</figcaption>
