--- a/web115/brand.html
+++ b/web115/brand.html
@@ -11,7 +11,7 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2>Welcome to Digital Dungeons,</h2>
+        <h2 id="h2Main">Welcome to Digital Dungeons,</h2>
         <div id="brandParagraph1">
         <p> where our mission is to be the conduit for your creative endeavors in the world of
             RPG mapping. We believe that every map is a tapestry of narratives waiting to be woven, and we're here to
